[package]
name = "libetebase"
description = "C library for etebase"
homepage = "https://www.etebase.com"
repository = "https://github.com/etesync/libetebase/"
version = "0.5.3"
authors = ["Tom Hacohen <tom@stosb.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
publish = false

[lib]
name = "etebase"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
cbindgen = "^0.14.2"

[dependencies]
etebase = "^0.5.3"
